Mantaflow Liquid - Gravity not respecting Time Scale from domain. #76426

Closed
opened 2020-05-05 02:36:34 +02:00 by Everton Schneider · 15 comments

System Information
Operating system: Linux-5.4.0-29-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.64

Blender Version
Broken: version: 2.90 (sub 0), branch: master, commit date: 2020-05-04 16:18, hash: 375a50dad9
Worked: (newest version of Blender that worked as expected)

Short description of error
It seems to me that gravity is not respecting the time scale setting from the liquid domain. The liquid is freezing but the gravity keeps acting over the fluid at the normal speed...

ezgif.com-optimize.gif

Exact steps for others to reproduce the error
Just playback the attached file and see what I mean. The time scale is animated from default 1.0 to 0.1.

Liquid_Gravity_TimeScale.blend

**System Information** Operating system: Linux-5.4.0-29-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.64 **Blender Version** Broken: version: 2.90 (sub 0), branch: master, commit date: 2020-05-04 16:18, hash: `375a50dad9` Worked: (newest version of Blender that worked as expected) **Short description of error** It seems to me that gravity is not respecting the time scale setting from the liquid domain. The liquid is freezing but the gravity keeps acting over the fluid at the normal speed... ![ezgif.com-optimize.gif](https://archive.blender.org/developer/F8512910/ezgif.com-optimize.gif) **Exact steps for others to reproduce the error** Just playback the attached file and see what I mean. The time scale is animated from default 1.0 to 0.1. [Liquid_Gravity_TimeScale.blend](https://archive.blender.org/developer/F8512896/Liquid_Gravity_TimeScale.blend)

Added subscriber: @EvertonSchneider

Added subscriber: @EvertonSchneider
Member

Added subscribers: @sebbas, @lichtwerk

Added subscribers: @sebbas, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Not sure how this is supposed to work (observed behavior seems unpredictable to me as well...)

@sebbas: mind checking? (will confirm for now...)

Not sure how this is supposed to work (observed behavior seems unpredictable to me as well...) @sebbas: mind checking? (will confirm for now...)

The expected behavior is the same as in the SPH Particles example here:
ezgif.com-optimize (1).gif
Note that the timestep starts with default value and is animated to a lower value, slowing down the particle simulation AND also takes into account the gravity and forces influences. Note that the velocity color of the particles doesn't change when the timestep is slowing down, the velocity remains the same but the timestep is slower...

The expected behavior is the same as in the SPH Particles example here: ![ezgif.com-optimize (1).gif](https://archive.blender.org/developer/F8515003/ezgif.com-optimize__1_.gif) Note that the timestep starts with default value and is animated to a lower value, slowing down the particle simulation AND also takes into account the gravity and forces influences. Note that the velocity color of the particles doesn't change when the timestep is slowing down, the velocity remains the same but the timestep is slower...

Force Fields are not working also...
Note in the attached file that right when the timestep is slowing down the liquid particles starts to go crazy, their velocity color goes red immediately...
The above mentioned SPH particles behavior takes into account the force fields and gravity as expected, keeping the motion of the particles and only slowing down the timestep.

Liquid_Gravity_TimeScale.blend

Force Fields are not working also... Note in the attached file that right when the timestep is slowing down the liquid particles starts to go crazy, their velocity color goes red immediately... The above mentioned SPH particles behavior takes into account the force fields and gravity as expected, keeping the motion of the particles and only slowing down the timestep. [Liquid_Gravity_TimeScale.blend](https://archive.blender.org/developer/F8515010/Liquid_Gravity_TimeScale.blend)

This issue was referenced by 6400f54b4c

This issue was referenced by 6400f54b4cc6d9cdb420ac4f62dd5eb0387aa7c0

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sebastián Barschkis self-assigned this 2020-05-07 17:35:09 +02:00

Great work! Thank you SO MUCH! You are an awesome team! But special thanks to sebbas! Thank you! thank you! thank you!

Great work! Thank you SO MUCH! You are an awesome team! But special thanks to sebbas! Thank you! thank you! thank you!

Please, check the blend file attached in the comment that I said about Force Fields... after checking this problem with forcefields I see the same problem still happening...

Please, check the blend file attached in the comment that I said about Force Fields... after checking this problem with forcefields I see the same problem still happening...

Now there's an even stranger thing happening... see the attached file, please. Also, after checking the file please test the minimum timestep value of the domain, default is 1 change it to 4(same value as maximum) and the result seems to be slower with time scale 1...

Liquid_ForceFields_TimeScale.blend

Now there's an even stranger thing happening... see the attached file, please. Also, after checking the file please test the minimum timestep value of the domain, default is 1 change it to 4(same value as maximum) and the result seems to be slower with time scale 1... [Liquid_ForceFields_TimeScale.blend](https://archive.blender.org/developer/F8518892/Liquid_ForceFields_TimeScale.blend)

Thanks, @sebbas I just compiled blender now after your additional fix, and everything related to this report is working fine now! The slowdown in time scale is taking gravity and forcefields into account. THANK YOU!
There's something weird already with forcefields but I will open a separate report. The animated "Max Distance" under "Fallof" are affecting particles(SPH) and liquid(MANTAFLOW) even outside of radius scale, there's full influence inside the Max Distance radius but outside of the radius there's still a little of influence, it's not totally 0.

Thanks, @sebbas I just compiled blender now after your additional fix, and everything related to this report is working fine now! The slowdown in time scale is taking gravity and forcefields into account. THANK YOU! There's something weird already with forcefields but I will open a separate report. The animated "Max Distance" under "Fallof" are affecting particles(SPH) and liquid(MANTAFLOW) even outside of radius scale, there's full influence inside the Max Distance radius but outside of the radius there's still a little of influence, it's not totally 0.

@EvertonSchneider Ok, great! Yes, a new report would appropriate for that!

@EvertonSchneider Ok, great! Yes, a new report would appropriate for that!

Added subscriber: @jbaker8935

Added subscriber: @jbaker8935

Is there a way to simulate the old behavior ? eg. divide gravity by the time scale? (edit: <= almost but not quite) to allow older blends to be edited in 2.9 without a complete rework.

e.g., this relied on the bug. https://www.youtube.com/watch?v=Rc5-R12XZFk

of course going forward i'll use the new behavior

Is there a way to simulate the old behavior ? eg. divide gravity by the time scale? (edit: <= almost but not quite) to allow older blends to be edited in 2.9 without a complete rework. e.g., this relied on the bug. https://www.youtube.com/watch?v=Rc5-R12XZFk of course going forward i'll use the new behavior
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76426
No description provided.