Fix T76426: Mantaflow Liquid - Gravity not respecting Time Scale from domain.

Removed timescale from conversion factor - factors should stay constant even if timescale changes.